--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Marck Script"
-      rel="stylesheet"
-    />
-    <link
       href="https://fonts.googleapis.com/css?family=Oooh Baby"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Lora"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Work Sans"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
